# activity_stream

./: .gitignore  INVESTIGATION.md  README.md  dev.sh  docker-compose.yml  explanation.md  index.md  live.main.tex  pyproject.toml  run-with-backoff.sh  startup-tmux.sh  startup.md  study.md
.claude/: launch.json
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css  useNow.js  usePolling.js  utils.js
frontend/src/components/: ActivityGauge.jsx  ActivityPanel.jsx  BaselineBadge.jsx  DayDetailPanel.jsx  Header.jsx  Heatmap.jsx  HotspotsLeaderboard.jsx  IdleStrip.jsx  InputMixIndicator.jsx  MetricCards.jsx  MetricsChart.jsx  MonthCalendar.jsx  RangeSelector.jsx  RhythmPanel.jsx  RhythmSparkline.jsx  SessionFatigueSparkline.jsx  SessionTable.jsx  SessionsList.jsx  StalenessChip.jsx  TodayTotals.jsx  UserSelector.jsx
keyspark/: agent.py  aggregations.py  api.py  batch_job.py  benchmark.py  botgen.py  ml.py  streaming_job.py  watchdog.py
paper/: README.md  main.tex  references.bib
presentation/: pres.md  ~$keyspark.pptx
research/: jigglers.md
scripts/: seed_demo_jiggler.py
streamguard/: agent.py  api.py  batch_job.py  benchmark.py  ml.py  streaming_job.py
