[project]
name = "streamguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pynput>=1.8.2",
    "pyspark>=4.1.1",
    "uvicorn[standard]>=0.47.0",
]
