[project]
name = "streamguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10,<4",
    "confluent-kafka>=2.14.0,<3",
    "fastapi>=0.136.1,<1",
    "pandas>=3.0.3,<4",
    "pyarrow>=24.0.0,<25",
    "pynput>=1.8.2,<2",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyspark>=4.1.1,<5",
    "uvicorn[standard]>=0.47.0,<1",
]
